--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -1,3 +1,4 @@
+// Home page section home
 .home {
   margin-top: 8rem;
   background: url(/apple_store/images/home_images/h1.png) no-repeat;
@@ -37,13 +38,13 @@
   }
 }
 
-// Home page presentcard
+// Home section presentcard
 .presentcard {
   background: url(/apple_store/images/home_images/h2.png) no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
-  min-height: 40vh;
+  min-height: 57vh;
   align-items: center;
   justify-content: center;
   margin-top: 2rem;
@@ -67,13 +68,13 @@
   }
 }
 
-// Home page Ipad
+// Home section Ipad
 .about_ipad {
   background: url(/apple_store/images/home_images/h3.png) no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
-  height: 60vh;
+  height: 58vh;
   min-width: 30vw;
   align-items: center;
   justify-content: center;
@@ -100,24 +101,164 @@
   }
 }
 
-// Home page gallery grid
+// Box gallery section gallery
+
 .gallery .box-container {
   columns: 2 37rem;
-  column-gap: 1.5rem;
+  column-gap: 2rem;
 
-  .box-gallery {
-    position: relative;
-    margin-bottom: 0.8rem;
-    break-inside: avoid;
+  .box-gallery1 {
+    background: url(/apple_store/images/home_images/h4.png) no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    min-height: 48vh;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom: 3rem;
 
-    img {
-      width: 100%;
-      margin-bottom: 0.8rem;
+    ul li {
+      list-style: none;
+      display: inline;
+
+      a {
+        padding: 1rem;
+        margin-bottom: 5rem;
+        font-size: 2rem;
+        color: #06c;
+        letter-spacing: inherit;
+      }
+    }
+  }
+
+  .box-gallery2 {
+    background: url(/apple_store/images/home_images/h5.png) no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    min-height: 48vh;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom: 3rem;
+
+    ul li {
+      list-style: none;
+      display: inline;
+
+      a {
+        padding: 1rem;
+        margin-bottom: 5rem;
+        font-size: 2rem;
+        color: #06c;
+        letter-spacing: inherit;
+      }
+    }
+  }
+
+  .box-gallery3 {
+    background: url(/apple_store/images/home_images/h6.png) no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    min-height: 48vh;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom: 3rem;
+
+    ul li {
+      list-style: none;
+      display: inline;
+
+      a {
+        padding: 1rem;
+        margin-bottom: 5rem;
+        font-size: 2rem;
+        color: #06c;
+        letter-spacing: inherit;
+      }
+    }
+  }
+
+  .box-gallery4 {
+    background: url(/apple_store/images/home_images/h7.png) no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    min-height: 48vh;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom: 3rem;
+
+    ul li {
+      list-style: none;
+      display: inline;
+
+      a {
+        padding: 1rem;
+        margin-bottom: 5rem;
+        font-size: 2rem;
+        color: #06c;
+        letter-spacing: inherit;
+      }
+    }
+  }
+
+  .box-gallery5 {
+    background: url(/apple_store/images/home_images/h8.png) no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    min-height: 48vh;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom: 2rem;
+
+    ul li {
+      list-style: none;
+      display: inline;
+
+      a {
+        padding: 1rem;
+        margin-bottom: 5rem;
+        font-size: 2rem;
+        color: #06c;
+        letter-spacing: inherit;
+      }
+    }
+  }
+
+  .box-gallery6 {
+    background: url(/apple_store/images/home_images/h9.png) no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    min-height: 48vh;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom: 3rem;
+
+    ul li {
+      list-style: none;
+      display: inline;
+
+      a {
+        padding: 1rem;
+        margin-bottom: 5rem;
+        font-size: 2rem;
+        color: #06c;
+        letter-spacing: inherit;
+      }
     }
   }
 }
 
-// Mac home img
+// Mac homepage section home_mac
 
 .home_mac {
   background: url(/Apple_store/images/mac_images/m1.png) no-repeat;
