--- a/Apple_store/partials/_text-image.scss
+++ b/Apple_store/partials/_text-image.scss
@@ -146,6 +146,25 @@
   margin: 8rem 0 5rem;
 }
 
+.big_text_x_light {
+  font-size: 4.5rem;
+  font-weight: 400;
+  margin: 4.5rem 0 -1rem;
+  color: white;
+}
+.big_text_x_dark {
+  font-size: 4.5rem;
+  font-weight: 400;
+  margin: 4.5rem 0 -1rem;
+}
+
+.red{
+  margin: 2rem 0;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  color: red;
+}
+
 .big_text_x {
   font-size: 5.5rem;
   font-weight: 800;
@@ -164,16 +183,16 @@
   color: white;
   font-size: 2rem;
   font-weight: 300;
-  margin-top: 2rem;
+  margin-top: 1rem;
   margin-bottom: 2rem;
   padding: 0 5rem;
 }
 
 .text_dark{
   color: black;
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 300;
-  margin-top: 2rem;
+  margin-top: 1rem;
   margin-bottom: 2rem;
   padding: 0 5rem;
 }
