_boxgallery on home page done and placed as a new partials in _boxgallery partials

--- a/Apple_store/styles/style.scss
+++ b/Apple_store/styles/style.scss
@@ -14,6 +14,7 @@
 @import '../partials/text-image';
 @import '../partials/small-stylings';
 @import '../partials/table';
+@import '../partials/boxgallery';
 
 * {
   box-sizing: border-box;
