small changes on home page

--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -5,6 +5,7 @@
   background-size: cover;
   background-position: center;
   display: flex;
+  flex-direction: column;
   min-height: 70vh;
   align-items: center;
   justify-content: center;
