changed text size and link fix hover effects

--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -1,12 +1,12 @@
 // Home page section home
 .home {
   margin-top: 8rem;
-  background: url(/apple_store/images/home_images/h1.png) no-repeat;
+  background: url(/apple_store/images/home_images/h1.1.png) no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
   flex-direction: column;
-  min-height: 70vh;
+  min-height: 50vh;
   align-items: center;
   justify-content: center;
 
