--- a/Apple_store/partials/_small-stylings.scss
+++ b/Apple_store/partials/_small-stylings.scss
@@ -12,3 +12,15 @@ section {
   width: 80%;
 }
 
+// Links hover
+
+ul li{
+  a .fa-chevron-right{
+    font-size: 1.4rem;
+  }
+  a:hover {
+    text-decoration: underline;
+
+  }
+}
+
