Finish home page and start on mac page

--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -1,17 +1,16 @@
 // Home page section home
 .home {
-  margin-top: 8rem;
   background: url(/apple_store/images/home_images/h1.1.png) no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
   flex-direction: column;
-  min-height: 50vh;
+  min-height: 70vh;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 
   .content {
-    margin-top: -80rem;
+    margin-top: 0rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -105,29 +104,48 @@
 // Mac homepage section home_mac
 
 .home_mac {
+  margin-top: 8rem;
   background: url(/Apple_store/images/mac_images/m1.png) no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
-  min-height: 80vh;
+  flex-direction: column;
+  min-height: 70vh;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 
   .content {
-    min-width: 30vh;
     display: flex;
-    margin-top: -35rem;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 3rem;
+    padding: 1rem;
+
+    h1{
+      font-size: 5.5rem;
+      font-weight: 500;
+      margin-top: .5rem;
+    }
+    h3{
+      margin-top: 0.5rem;
+      font-size: 3.5rem;
+      font-weight: 400;
+      margin-bottom: 2rem;
+    }
+
+    .price{
+      font-size: 2rem;
+      font-weight: 200;
+      margin-bottom: .5rem;
+      margin-bottom: 1rem;
+    }
 
     ul li {
       list-style: none;
       display: inline;
 
       a {
-        padding: 1.5rem;
+        padding: 1rem;
         margin-bottom: 5rem;
         font-size: 2rem;
         color: #06c;
@@ -141,26 +159,48 @@
   }
 }
 
-// MacBook image
+// MacBook Pro section
 
 .macBook_pro {
   background: url(/Apple_store/images/mac_images/m2.png) no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
+  flex-direction: column;
   min-height: 60vh;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 
   .content {
-    margin-top: -5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: white;
+
+    h2{
+      font-size: 5.5rem;
+      font-weight: 400;
+      margin-top: .5rem;
+    }
+
+    h3{
+      font-size: 3.5rem;
+      font-weight: 400;
+      margin-bottom: 2rem;
+    }
+
+    .price{
+      font-size: 2rem;
+      font-weight: 200;
+      margin-bottom: .5rem;
+      margin-bottom: 1rem;
+    }
 
     ul li {
       list-style: none;
       display: inline;
+      padding: .5rem;
+      margin-bottom: 2rem;
 
       a {
         font-size: 2rem;
