--- a/Apple_store/partials/_text-image.scss
+++ b/Apple_store/partials/_text-image.scss
@@ -19,11 +19,10 @@
     flex: 1 1 42rem;
     margin-bottom: 5rem;
 
-    .price {
-      margin-left: 0;
-      font-weight: 600;
-      text-decoration: underline;
-    }
+    // .price {
+    //   margin-left: 0;
+    //   font-weight: 600;
+    // }
   }
 }
 
@@ -145,6 +144,12 @@
   font-weight: 500;
   margin: 8rem 0 5rem;
 }
+// Big text 0.5rem margin
+.big_text_xl_0{
+  font-size: 6rem;
+  font-weight: 500;
+  margin: .5rem;
+}
 
 .big_text_x_light {
   font-size: 4.5rem;
@@ -160,9 +165,15 @@
 
 .red{
   margin-top: 2rem;
-  font-size: 1.5rem;
-  text-transform: uppercase;
+  font-size: 1.6rem;
+  
   color: red;
+}
+
+.orange{
+  margin-top: 2rem;
+  font-size: 1.8rem;
+  color: rgb(255, 115, 0);
 }
 
 .big_text_x {
