--- a/Apple_store/partials/_table.scss
+++ b/Apple_store/partials/_table.scss
@@ -1,77 +1,123 @@
 .table-headline{
-    font-size: 42px;
+    font-size: 36px;
     font-weight: 600;
 }
-table{
-    
-    width: 100%;
-    max-width: 980px;
+
+.phone-table{
+    margin-top: 40px;
     margin: 40px auto 0;
-    thead{
-        row-gap: 25px;
-        td{
-            div{
-                width: 180px;
-                display: flex;
-                flex-direction: column;
-                margin: 0 auto;
-                align-items: center;
-                border-bottom: 1px solid rgba(131, 131, 131, 0.308);
-                h4{
-                    padding-top: 10px;
-                    font-size: 12px;
-                    font-weight: 300;
-                    color: #BF4800;
-                }
-                h2{
-                    font-weight: 600;
-                    font-size: 20px;
-                    padding-bottom: 10px;
-                }
-                
-                p{
-                    white-space: nowrap;
-                    font-size: 16px;
-                    color: #1D1D1F;
-                }
-                .price{
-                    padding-top: 30px;
-                    font-size: 13.5px;
-                }
-                button{
-                    color: white;
-                    cursor: pointer;
-                    font-size: 12px;
-                    background-color: #0071E3;
-                    padding: 3px 12px;
-                    margin-top: 16px;
-                    border-radius: 2.3rem;
-                }
-                a{
-                    font-size: 13.5px;
-                    color: #0071E3;
-                    margin-bottom: 25px;
-                    &:hover{
-                        text-decoration: underline;
-                    }
-                    i{
-                        font-size: 10px;
-                        
-                    }
-                }
-                
+    display: flex;
+    justify-content: center;
+    column-gap: 50px;
+    
+    .col{
+        width: fit-content;
+        display: flex;
+        flex-direction: column;
+        row-gap: 20px;
+        .thead{
+            width: 180px;
+            display: flex;
+            flex-direction: column;
+            margin: 0 auto;
+            align-items: center;
+            border-bottom: 1px solid rgba(131, 131, 131, 0.308);
+            h4{
+                padding-top: 10px;
+                font-size: 12px;
+                font-weight: 300;
+                color: #BF4800;
             }
-            .iphone13, .iphonese{
-                h4{
-                    color: transparent;
+            h2{
+                font-weight: 600;
+                font-size: 20px;
+                padding-bottom: 10px;
+            }
+                
+            p{
+                white-space: nowrap;
+                font-size: 16px;
+                color: #1D1D1F;
+            }
+            .price{
+                padding-top: 30px;
+                font-size: 13.5px;
+            }
+            button{
+                color: white;
+                cursor: pointer;
+                font-size: 12px;
+                background-color: #0071E3;
+                padding: 3px 12px;
+                margin-top: 16px;
+                border-radius: 2.3rem;
+            }
+            a{
+                font-size: 13.5px;
+                color: #0071E3;
+                margin-bottom: 25px;
+                &:hover{
+                    text-decoration: underline;
+                }
+                i{
+                    font-size: 10px;
+                        
                 }
             }
         }
+        .tbody{
+            color: #1d1d1fbd;
+            display: flex;
+            flex-direction: column;
+            row-gap: 35px;
+            padding-bottom: 40px;
+            border-bottom: 1px solid rgba(131, 131, 131, 0.308);
+            h3{
+                font-size: 16px;
+                margin-bottom: 7px;                
+            }
+            p{
+                font-size: 13px;
+                margin-bottom: 3px;
+            }
+            
+            .island-specs{
+                height: 96px;
+            }
+            .chip-specs{
+                height: 77px;
+            }
+            .camera-specs{
+                height: 148px;
+            }
+             div{
+                div{
+                    .spacer{font-weight: 700;}
+                    
+                }
+             }
+        }
     }
-    // tbody{
-
-    // }
-    // tfoot{
-
-    // }
+    .col3, .col4{
+        .thead{
+            
+            h4{
+                color: transparent;
+            }
+        }
+        
+    }
+    
+}
+@media screen and (max-width: 960px){
+    .table-container{
+        flex-wrap: wrap;
+        width: 600px;
+        
+        .col{
+            .thead{
+                width: 220px;
+            }
+        }
+    }
 }
