Correcting renaming of variable

--- a/Apple_store/partials/_table.scss
+++ b/Apple_store/partials/_table.scss
@@ -110,7 +110,7 @@
     
 }
 @media screen and (max-width: 960px){
-    .table-container{
+    .phone-table{
         flex-wrap: wrap;
         width: 600px;
         
