--- a/Apple_store/styles/style.css
+++ b/Apple_store/styles/style.css
@@ -1074,8 +1074,8 @@ table thead td .iphone13 h4, table thead td .iphonese h4 {
 }
 
 .presentcard_mac {
-  -moz-columns: 2;
-       columns: 2;
+  -moz-columns: 2 37rem;
+       columns: 2 37rem;
   -moz-column-gap: 0;
        column-gap: 0;
 }
@@ -1087,8 +1087,7 @@ table thead td .iphone13 h4, table thead td .iphonese h4 {
   flex-direction: column;
   min-height: 48vh;
   align-items: center;
-  justify-content: flex-start;
-  margin-bottom: 3rem;
+  justify-content: center;
 }
 .presentcard_mac .content_left ul li {
   list-style: none;
@@ -1101,6 +1100,10 @@ table thead td .iphone13 h4, table thead td .iphonese h4 {
   color: #06c;
   letter-spacing: inherit;
 }
+.presentcard_mac .content_left .logo {
+  font-size: 7rem;
+  color: white;
+}
 .presentcard_mac .content_right {
   background: url(/apple_store/images/mac_images/m3.1.png) no-repeat;
   background-size: cover;
@@ -1110,7 +1113,6 @@ table thead td .iphone13 h4, table thead td .iphonese h4 {
   min-height: 48vh;
   align-items: center;
   justify-content: flex-start;
-  margin-bottom: 3rem;
 }
 .presentcard_mac .content_right ul li {
   list-style: none;
